--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+*{margin: 0;padding: 0;}
+html{font-size: 62.5%;box-sizing: border-box;}
+body, #root{height: 100vh;margin: 0;}
+body, input, select, textarea{font-size: 1.6rem;font-family: Helvetica, Arial, sans-serif;}
+a, button{transition: all .4s ease;}
+a:hover{color: #ff8000;}
+
+.grid-container{display: grid;grid-template-areas: "header" "main" "footer";grid-template-rows: 5rem 1fr 5rem;grid-template-columns: 1fr;height: 100%;}
+header{grid-area: header;background-color: #203040;color: #ffffff;display: flex;align-items: center;padding: .5rem;}
+header a{color: #ffffff;text-decoration: none;}
+main{grid-area: main;background-color: #ffffff;}
+footer{grid-area: footer;background-color: #203040;color: #ffffff;display: flex;justify-content: center;align-items: center;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
