--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+
 *{margin: 0;padding: 0;}
 html{font-size: 62.5%;box-sizing: border-box;}
 body, #root{height: 100vh;margin: 0;}
-body, input, select, textarea{font-size: 1.6rem;font-family: Helvetica, Arial, sans-serif;}
+body, input, select, textarea, button{font-size: 1.6rem;font-family: Montserrat, Helvetica, Arial, sans-serif;}
+a{text-decoration: none;}
 a, button{transition: all .4s ease;}
 a:hover{color: #ff8000;}
 
@@ -12,18 +15,21 @@ header a{color: #ffffff;text-decoration: none;}
 main{grid-area: main;background-color: #ffffff;}
 footer{grid-area: footer;background-color: #203040;color: #ffffff;display: flex;justify-content: center;align-items: center;}
 
+.content{display: flex;flex-wrap: wrap;}
+.main{flex: 3 60rem;}
+.sidebar{flex: 1 20rem;}
 
-
-
-
-
-
-
-
-
-
-
-
+/* Products */
+.products ul{display: flex;flex-wrap: wrap;justify-content: center;align-items: center;}
+.products li{flex: 1 1 29rem;height: 47rem;padding: 1rem;padding: 1rem;list-style-type: none;}
+.product{display: flex;flex-direction: column;justify-content: space-between;height: 100%;}
+.product img{max-width: 37rem;max-height: 37rem;margin-bottom: 1rem;}
+.product-price{display: flex;justify-content: space-between;align-items: center;}
+.product-price div, .product-price button{text-align: center;flex: 1;}
+.product-price div{font-size: 2rem;}
+.button{padding: 1rem;border: 0.1rem solid #c0c0c0;background-color: #f0f0f0;cursor: pointer;}
+.button:hover{border: 0.1rem solid #808080;}
+.button.primary{background-color: #ffc040;}
 
 
 
