--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,10 @@ footer{grid-area: footer;background-color: #203040;color: #ffffff;display: flex;
 
 /* Products */
 .products ul{display: flex;flex-wrap: wrap;justify-content: center;align-items: center;}
-.products li{flex: 1 1 29rem;height: 47rem;padding: 1rem;padding: 1rem;list-style-type: none;}
+.products li{flex: 1 1 29rem;height: 50rem;padding: 1rem;padding: 1rem;list-style-type: none;}
 .product{display: flex;flex-direction: column;justify-content: space-between;height: 100%;}
-.product img{max-width: 37rem;max-height: 37rem;margin-bottom: 1rem;}
+.product img{max-width: 27rem;margin-bottom: 1rem;}
+.product-link{margin-bottom: 1rem;}
 .product-price{display: flex;justify-content: space-between;align-items: center;}
 .product-price div, .product-price button{text-align: center;flex: 1;}
 .product-price div{font-size: 2rem;}
@@ -31,9 +32,9 @@ footer{grid-area: footer;background-color: #203040;color: #ffffff;display: flex;
 .button:hover{border: 0.1rem solid #808080;}
 .button.primary{background-color: #ffc040;}
 
-
-
-
+/* Filters */
+.filters{display: flex;padding: 1rem;margin: 1rem;justify-content: space-between;border-bottom: 0.1rem solid #c0c0c0;}
+.filters div{flex: 1;}
 
 
 
