--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,33 @@ footer{grid-area: footer;background-color: #203040;color: #ffffff;display: flex;
 .filters{display: flex;padding: 1rem;margin: 1rem;justify-content: space-between;border-bottom: 0.1rem solid #c0c0c0;}
 .filters div{flex: 1;}
 
+/* Cart */
+.cart{display: flex;padding: 1rem;margin: 1rem;}
+.cart-header{border-bottom: .1rem #c0c0c0 solid;}
+.cart-items{list-style-type: none;width: 100%;}
+.cart-items li{display: flex;}
+.cart-items li div{padding: .5rem;}
+.cart-items li div:last-child{flex: 1;}
+.cart-items img{width: 5rem;}
+.right{text-align: right;}
+.total{display: flex;justify-content: space-between;align-items: center;width: 100%;}
+.total > div{font-size: 2rem;}
+.total > div, .total > button{flex: 1}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
