--- a/src/index.css
+++ b/src/index.css
@@ -49,10 +49,10 @@ footer{grid-area: footer;background-color: #203040;color: #ffffff;display: flex;
 .total > div{font-size: 2rem;}
 .total > div, .total > button{flex: 1}
 
-
-
-
-
+/* Checkout */
+.form-container{width: 100%;list-style-type: none;}
+.form-container li{display: flex;flex-direction: column;padding: 1rem;}
+.form-container li input{padding: 1rem;border: .1rem solid #c0c0c0;}
 
 
 
